--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100%;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
